--- a/index.html
+++ b/index.html
@@ -1,88 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/> 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-
-
-    <title>
+<!DOCTYPE html> <html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="style.css" rel="stylesheet"/>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+        
+            <title>
         Work Day Scheduler
     </title>
-</head>
+    </head>
 
-<body>
-
-    <header class="jumbotron">
-        <h1 class="display-3">Work Day Scheduler</h1>
-        <h2>All in a DAY's Work</h2>
-        <p class="lead" id="currentDay">Date</p>
-    </header>
-
-    <div class="container">
-        <!-- Timeblocks go here -->
-        <div class="row" id="nineAM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">9:00 AM</div>
+        <body>
+            <header class="jumbotron"> <h1 class="display-3">Work Day Scheduler</h1>
+            <p class="lead">A simple calendar app for scheduling your work day</p>
+            <!--Time is inserted  in currentDay below-->
+            <p class="lead" id="currentDay">Date</p>
+        </header>
+        <div
+            class="container">
+            <!-- Timeblocks go here -->
+            <div class="row" id="nineAM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">9:00 AM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput9">
+                    <textarea cols="50" id="textareaNine" rows="4"></textarea>
+                </div>
+                <div class="column .col-lg-2" id="saveTheDate">
+                    <button class="saveBtn" id="saveBtnNine" type="button"></button>
+                </div>
             </div>
-            <div class="column .col-lg-8" id="userInput9">
-                <textarea cols="80" id ="textArea" id="textareaNine" rows="2"></textarea>
+            <div class="row" id="tenAM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">10:00 AM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput10">
+                    <textarea cols="50" id="textareaTen" rows="4"></textarea>
+                </div>
+                <div class="column .col-lg-2" id="saveTheDate">
+                    <button class="saveBtn" id="saveBtnTen" type="button"></button>
+                </div>
             </div>
-            <div class="column .col-lg-2" id="saveTheDate">
-                <button class="saveBtn" id="saveBtnNine" type="button"></button>
+            <div class="row" id="elevenAM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">11:00 AM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput11">
+                    <textarea cols="50" id="textareaEleven" rows="4"></textarea>
+                </div>
+                <div class="column .col-lg-2" id="saveTheDate">
+                    <button class="saveBtn" id="saveBtnEleven" type="button"></button>
+                </div>
             </div>
-        </div>
-        <div class="row" id="tenAM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">10:00 AM</div>
+            <div class="row" id="twelvePM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">12:00 PM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput12">
+                    <textarea cols="50" id="textareaTwelve" rows="4"></textarea>
+                </div>
+                <div class="column .col-lg-2" id="saveTheDate">
+                    <button class="saveBtn" id="saveBtnTwelve" type="button"></button>
+                </div>
             </div>
-            <div class="column .col-lg-8" id="userInput10">
-                <textarea cols="80" id ="textArea" id="textareaTen" rows="2"></textarea>
+            <div class="row" id="onePM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">1:00 PM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput1">
+                    <textarea cols="50" id="textareaOne" rows="4"></textarea>
+                </div>
+                <div class="column .col-lg-2" id="saveTheDate">
+                    <button class="saveBtn" id="saveBtnOne" type="button"></button>
+                </div>
             </div>
-            <div class="column .col-lg-2" id="saveTheDate">
-                <button class="saveBtn" id="saveBtnTen" type="button"></button>
-            </div>
-        </div>
-        <div class="row" id="elevenAM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">11:00 AM</div>
-            </div>
-            <div class="column .col-lg-8" id="userInput11">
-                <textarea cols="80" id ="textArea"  id="textareaEleven" rows="2"></textarea>
-            </div>
-            <div class="column .col-lg-2" id="saveTheDate">
-                <button class="saveBtn" id="saveBtnEleven" type="button"></button>
-            </div>
-        </div>
-        <div class="row" id="twelvePM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">12:00 PM</div>
-            </div>
-            <div class="column .col-lg-8" id="userInput12">
-                <textarea cols="80" id ="textArea"  id="textareaTwelve" rows="2"></textarea>
-            </div>
-            <div class="column .col-lg-2" id="saveTheDate">
-                <button class="saveBtn" id="saveBtnTwelve" type="button"></button>
-            </div>
-        </div>
-        <div class="row" id="onePM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">1:00 PM</div>
-            </div>
-            <div class="column .col-lg-8" id="userInput1">
-                <textarea cols="80" id ="textArea"  id="textareaOne" rows="2"></textarea>
-            </div>
-            <div class="column .col-lg-2" id="saveTheDate">
-                <button class="saveBtn" id="saveBtnOne" type="button"></button>
-            </div>
-        </div>
-        <div class="row" id="twoPM">
-            <div class="column .col-lg-2" id="hour">
-                <div id="hourOfDay">2:00 PM</div>
-            </div>
-            <div class="column .col-lg-8" id="userInput2">
-                <textarea cols="80" id ="textArea"  id="textareaTwo" rows="2"></textarea>
+            <div class="row" id="twoPM">
+                <div class="column .col-lg-2" id="hour">
+                    <div id="hourOfDay">2:00 PM</div>
+                </div>
+                <div class="column .col-lg-8" id="userInput2">
+                    <textarea cols="50" id="textareaTwo" rows="4"></textarea>
             </div>
             <div class="column .col-lg-2" id="saveTheDate">
                 <button class="saveBtn" id="saveBtnTwo" type="button"></button>
@@ -93,7 +92,7 @@
                 <div id="hourOfDay">3:00 PM</div>
             </div>
             <div class="column .col-lg-8" id="userInput3">
-                <textarea cols="80" id ="textArea"  id="textareaThree" rows="2"></textarea>
+                <textarea cols="50" id="textareaThree" rows="4"></textarea>
             </div>
             <div class="column .col-lg-2" id="saveTheDate">
                 <button class="saveBtn" id="saveBtnThree" type="button"></button>
@@ -104,7 +103,7 @@
                 <div id="hourOfDay">4:00 PM</div>
             </div>
             <div class="column .col-lg-8" id="userInput4">
-                <textarea cols="80" id ="textArea"  id="textareaFour" rows="2"></textarea>
+                <textarea cols="50" id="textareaFour" rows="4"></textarea>
             </div>
             <div class="column .col-lg-2" id="saveTheDate">
                 <button class="saveBtn" id="saveBtnFour" type="button"></button>
@@ -115,7 +114,7 @@
                 <div id="hourOfDay">5:00 PM</div>
             </div>
             <div class="column .col-lg-8" id="userInput5">
-                <textarea cols="80" id ="textArea"  id="textareaFive" rows="2"></textarea>
+                <textarea cols="50" id="textareaFive" rows="4"></textarea>
             </div>
             <div class="column .col-lg-2" id="saveTheDate">
                 <button class="saveBtn" id="saveBtnFive" type="button"></button>
@@ -123,6 +122,5 @@
         </div>
 
     </div>
-</body>
-
-</html>
+    </body>
+</html></div></body></html></div><script src="planner.js"></script></body></html>
