hoping it works this time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header class="jumbotron"> <h1 class="display-3">Work Day Scheduler</h1>
             <p class="lead">A simple calendar app for scheduling your work day</p>
             <!--Time is inserted  in currentDay below-->
-            <p class="lead" id="currentDay">Date</p>
+            <p class="lead" id="currentDay"></p>
         </header>
         <div
             class="container">
