--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="style.css" rel="stylesheet"/>
+        
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
         
@@ -123,4 +124,10 @@
 
     </div>
     </body>
-</html></div></body></html></div><script src="planner.js"></script></body></html>
+</html></div></body></html></div>
+<!-- link moment.js file downloaded in momentjs.com -->
+<script src="moment.js"></script>
+<script src="planner.js"></script>
+<!-- downloaded from momentjs.com and linked per instruction -->
+<script src="lib/moment/moment.min.js"></script>
+</body></html>
