store and retieved to and from local storage is working

--- a/index.html
+++ b/index.html
@@ -1,93 +1,102 @@
-<!DOCTYPE html> <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
-        <link href="style.css" rel="stylesheet"/>
-        
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
-        
-            <title>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+        integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+        crossorigin="anonymous"></script>
+
+    <title>
         Work Day Scheduler
     </title>
-    </head>
+</head>
 
-        <body>
-            <header class="jumbotron"> <h1 class="display-3">Work Day Scheduler</h1>
-            <p class="lead">A simple calendar app for scheduling your work day</p>
-            <!--Time is inserted  in currentDay below-->
-            <p class="lead" id="currentDay"></p>
-        </header>
-        <div
-            class="container">
-            <!-- Timeblocks go here -->
-            <div class="row" id="nineAM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">9:00 AM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput9">
-                    <textarea cols="50" id="textareaNine" rows="4"></textarea>
-                </div>
-                <div class="column .col-lg-2" id="saveTheDate">
-                    <button class="saveBtn" id="saveBtnNine" type="button"></button>
-                </div>
+<body>
+    <header class="jumbotron">
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <!--Time is inserted  in currentDay below-->
+        <p class="lead" id="currentDay"></p>
+    </header>
+    <div class="container">
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="nineAM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">9:00 AM</div>
             </div>
-            <div class="row" id="tenAM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">10:00 AM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput10">
-                    <textarea cols="50" id="textareaTen" rows="4"></textarea>
-                </div>
-                <div class="column .col-lg-2" id="saveTheDate">
-                    <button class="saveBtn" id="saveBtnTen" type="button"></button>
-                </div>
+            <div class="column .col-lg-8" id="userInput9">
+                <textarea cols="50" id="textareaNine" rows="4"></textarea>
             </div>
-            <div class="row" id="elevenAM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">11:00 AM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput11">
-                    <textarea cols="50" id="textareaEleven" rows="4"></textarea>
-                </div>
-                <div class="column .col-lg-2" id="saveTheDate">
-                    <button class="saveBtn" id="saveBtnEleven" type="button"></button>
-                </div>
+            <div class="column .col-lg-2" id="saveTheDate">
+                <button class="saveBtn" id="saveBtnNine" type="button"></button>
             </div>
-            <div class="row" id="twelvePM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">12:00 PM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput12">
-                    <textarea cols="50" id="textareaTwelve" rows="4"></textarea>
-                </div>
-                <div class="column .col-lg-2" id="saveTheDate">
-                    <button class="saveBtn" id="saveBtnTwelve" type="button"></button>
-                </div>
+        </div>
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="tenAM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">10:00 AM</div>
             </div>
-            <div class="row" id="onePM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">1:00 PM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput1">
-                    <textarea cols="50" id="textareaOne" rows="4"></textarea>
-                </div>
-                <div class="column .col-lg-2" id="saveTheDate">
-                    <button class="saveBtn" id="saveBtnOne" type="button"></button>
-                </div>
+            <div class="column .col-lg-8" id="userInput10">
+                <textarea cols="50" id="textareaTen" rows="4"></textarea>
             </div>
-            <div class="row" id="twoPM">
-                <div class="column .col-lg-2" id="hour">
-                    <div id="hourOfDay">2:00 PM</div>
-                </div>
-                <div class="column .col-lg-8" id="userInput2">
-                    <textarea cols="50" id="textareaTwo" rows="4"></textarea>
+            <div class="column .col-lg-2" id="saveTheDate">
+                <button class="saveBtn" id="saveBtnTen" type="button"></button>
+            </div>
+        </div>
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="elevenAM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">11:00 AM</div>
+            </div>
+            <div class="column .col-lg-8" id="userInput11">
+                <textarea cols="50" id="textareaEleven" rows="4"></textarea>
+            </div>
+            <div class="column .col-lg-2" id="saveTheDate">
+                <button class="saveBtn" id="saveBtnEleven" type="button"></button>
+            </div>
+        </div>
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="twelvePM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">12:00 PM</div>
+            </div>
+            <div class="column .col-lg-8" id="userInput12">
+                <textarea cols="50" id="textareaTwelve" rows="4"></textarea>
+            </div>
+            <div class="column .col-lg-2" id="saveTheDate">
+                <button class="saveBtn" id="saveBtnTwelve" type="button"></button>
+            </div>
+        </div>
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="onePM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">1:00 PM</div>
+            </div>
+            <div class="column .col-lg-8" id="userInput1">
+                <textarea cols="50" id="textareaOne" rows="4"></textarea>
+            </div>
+            <div class="column .col-lg-2" id="saveTheDate">
+                <button class="saveBtn" id="saveBtnOne" type="button"></button>
+            </div>
+        </div>
+        <!-- Created rows columns and buttons on each hour -->
+        <div class="row" id="twoPM">
+            <div class="column .col-lg-2" id="hour">
+                <div id="hourOfDay">2:00 PM</div>
+            </div>
+            <div class="column .col-lg-8" id="userInput2">
+                <textarea cols="50" id="textareaTwo" rows="4"></textarea>
             </div>
             <div class="column .col-lg-2" id="saveTheDate">
                 <button class="saveBtn" id="saveBtnTwo" type="button"></button>
             </div>
         </div>
+        <!-- Created rows columns and buttons on each hour -->
         <div class="row" id="threePM">
             <div class="column .col-lg-2" id="hour">
                 <div id="hourOfDay">3:00 PM</div>
@@ -99,6 +108,7 @@
                 <button class="saveBtn" id="saveBtnThree" type="button"></button>
             </div>
         </div>
+        <!-- Created rows columns and buttons on each hour -->
         <div class="row" id="fourPM">
             <div class="column .col-lg-2" id="hour">
                 <div id="hourOfDay">4:00 PM</div>
@@ -110,6 +120,7 @@
                 <button class="saveBtn" id="saveBtnFour" type="button"></button>
             </div>
         </div>
+        <!-- Created rows columns and buttons on each hour -->
         <div class="row" id="fivePM">
             <div class="column .col-lg-2" id="hour">
                 <div id="hourOfDay">5:00 PM</div>
@@ -123,11 +134,19 @@
         </div>
 
     </div>
-    </body>
-</html></div></body></html></div>
+</body>
+
+</html>
+</div>
+</body>
+
+</html>
+</div>
 <!-- link moment.js file downloaded in momentjs.com -->
 <script src="moment.js"></script>
 <script src="planner.js"></script>
 <!-- downloaded from momentjs.com and linked per instruction -->
 <script src="lib/moment/moment.min.js"></script>
-</body></html>
+</body>
+
+</html>
