--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 </div>
 <!-- link moment.js file downloaded in momentjs.com -->
 <script src="moment.js"></script>
+<!-- Main JS -->
 <script src="planner.js"></script>
 <!-- downloaded from momentjs.com and linked per instruction -->
 <script src="lib/moment/moment.min.js"></script>
