--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
 <!-- link moment.js file downloaded in momentjs.com -->
 <script src="moment.js"></script>
 <!-- Main Javascript -->
-<script src="./app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
